# Loki

./: .gitignore  Apptainer  CMakeLists.txt  Config.cmake.in  README.md
benchmarks/: CMakeLists.txt  combine_results.py  construct_atoms.cpp  iterate_atoms.cpp  persistent_factory.cpp  utils.cpp  utils.hpp
benchmarks/gripper/: domain.pddl  domain_fail.pddl  domain_success.pddl  fail.pddl  p-1-0.pddl  p-2-0.pddl  simple.pddl  success.pddl
benchmarks/miconic/: domain.pddl
benchmarks/schedule/: domain.pddl
benchmarks/woodworking-sat08-strips/: domain.pddl  domain_fixed.pddl  p01.pddl
examples/: CMakeLists.txt  multiple_problems.cpp  parser.cpp  position_cache.cpp  single_problem.cpp  translator.cpp  undefined_behavior.cpp
src/: CMakeLists.txt  ast.hpp  ast_adapted.hpp  config.hpp  error_handler.hpp  exceptions.cpp  filesystem.cpp  memory.cpp  parser.cpp  parser_api.hpp  parser_def.hpp  parser_instantiations.cpp
src/ast/: ast_adapted.hpp  parser.hpp  parser_def.hpp  parser_instantiations.cpp  printer.cpp
src/common/: exceptions.cpp  filesystem.cpp  memory.cpp
src/common/ast/: ast_adapted.hpp  parser.hpp  parser_def.hpp  parser_instantiations.cpp  printer.cpp
src/common/pddl/: base.cpp  scope.cpp
src/domain/: annotate_on_success.hpp  ast_adapted.hpp  parser.cpp  parser.hpp  parser_def.hpp  parser_instantiations.cpp  printer.cpp
src/domain/ast/: annotate_on_success.hpp  ast_adapted.hpp  parser.hpp  parser_def.hpp  parser_instantiations.cpp  printer.cpp
src/domain/pddl/: action.cpp  atom.cpp  base.cpp  conditions.cpp  derived_predicate.cpp  domain.cpp  effects.cpp  exceptions.cpp  function.cpp  function_expressions.cpp  function_skeleton.cpp  help_functions.hpp  insert_visitor.hpp  literal.cpp  object.cpp  parameter.cpp  parser.cpp  parser.hpp  predicate.cpp  requirements.cpp  term.cpp  type.cpp  unpacking_visitor.hpp  variable.cpp
src/formalism/: problem.cpp
src/parsers/: CMakeLists.txt
src/parsers/common/: config.hpp  error_handler.hpp  file_system.cpp  filesystem.hpp  utility.cpp  utility.hpp
src/parsers/domain/: driver.cpp  driver.hpp
src/pddl/: action.cpp  atom.cpp  axiom.cpp  conditions.cpp  derived_predicate.cpp  domain.cpp  domain_builder.cpp  domain_parser.cpp  effects.cpp  equal_to.cpp  exceptions.cpp  factories.cpp  formatter.cpp  formatter.hpp  function.cpp  function_expressions.cpp  function_skeleton.cpp  function_value.cpp  ground_atom.cpp  ground_literal.cpp  hash.cpp  literal.cpp  metric.cpp  numeric_fluent.cpp  object.cpp  parameter.cpp  parser.cpp  predicate.cpp  problem.cpp  problem_builder.cpp  problem_parser.cpp  repositories.cpp  requirements.cpp  requirements_enum.cpp  scope.cpp  term.cpp  translator.cpp  type.cpp  unpacking_visitor.hpp  variable.cpp
src/pddl/parser/: common.cpp  common.hpp  conditions.cpp  conditions.hpp  constants.cpp  constants.hpp  domain.cpp  domain.hpp  effects.cpp  effects.hpp  enums.cpp  enums.hpp  error_handling.cpp  error_handling.hpp  functions.cpp  functions.hpp  goal.cpp  goal.hpp  ground_literal.cpp  ground_literal.hpp  initial.cpp  initial.hpp  literal.cpp  literal.hpp  metric.cpp  metric.hpp  objects.cpp  objects.hpp  parameters.cpp  parameters.hpp  predicates.cpp  predicates.hpp  problem.cpp  problem.hpp  reference_utils.cpp  reference_utils.hpp  requirements.cpp  requirements.hpp  structure.cpp  structure.hpp  (+3 more)
src/pddl/translator/: add_type_predicates.cpp  add_type_predicates.hpp  compile_conditional_effects.cpp  compile_conditional_effects.hpp  initialize_equality.cpp  initialize_equality.hpp  initialize_metric.cpp  initialize_metric.hpp  interface copy.hpp  interface.hpp  move_existential_quantifiers.cpp  move_existential_quantifiers.hpp  recursive_base.hpp  recursive_cached_base.hpp  remove_types.cpp  remove_types.hpp  remove_typing.cpp  remove_typing.hpp  remove_universal_quantifiers.cpp  remove_universal_quantifiers.hpp  rename_quantified_variables.cpp  rename_quantified_variables.hpp  simplify_goal.cpp  simplify_goal.hpp  split_disjunctive_conditions.cpp  split_disjunctive_conditions.hpp  to_disjunctive_normal_form.cpp  to_disjunctive_normal_form.hpp  to_effect_normal_form.cpp  to_effect_normal_form.hpp  to_negation_normal_form.cpp  to_negation_normal_form.hpp  to_negation_normal_form_base.hpp  to_negation_normal_form_domain.hpp  to_negation_normal_form_problem.hpp  utils.cpp  utils.hpp
src/problem/: ast_adapted.hpp  parser.cpp  parser_def.hpp  parser_instantiations.cpp  printer.cpp
src/problem/ast/: ast_adapted.hpp  parser.hpp  parser_def.hpp  parser_instantiations.cpp  printer.cpp
src/problem/pddl/: atom.cpp  exceptions.cpp  ground_atom.cpp  ground_conditions.cpp  ground_effects.cpp  ground_function.cpp  ground_function_expressions.cpp  ground_literal.cpp  metric.cpp  numeric_fluent.cpp  parser.cpp  problem.cpp
src/utils/: equal_to.cpp  exceptions.cpp  filesystem.cpp  hash.cpp  memory.cpp  mumurhash3.cpp  parser.cpp
tests/: CMakeLists.txt  parser_wrapper.hpp
tests/common/: CMakeLists.txt  function_symbol.cpp  name.cpp  number.cpp  predicate.cpp  printer.cpp  printer.hpp  term.cpp  variable.cpp  word.cpp
tests/common/pddl/: garbage_collected_factory.cpp  persistent_factory.cpp  reference.cpp
tests/domain/: CMakeLists.txt  atomic_formula_skeleton.cpp  atomic_function_skeleton.cpp  function_symbol.cpp  function_type.cpp  function_typed_list_of_atom_function_skeletons.cpp  name.cpp  number.cpp  predicate.cpp  term.cpp  type.cpp  type_either.cpp  typed_list_of_names.cpp  typed_list_of_names_recursively.cpp  typed_list_of_variables.cpp  typed_list_of_variables_recursively.cpp  variable.cpp
tests/domain/ast/: atomic_function_skeleton.cpp  atomic_function_skeleton_general.cpp  function_symbol.cpp  function_symbol_total_cost.cpp  function_type.cpp  function_typed_list_of_atom_function_skeletons.cpp  predicate.cpp  term.cpp  typed_list_of_names.cpp  typed_list_of_names_recursively.cpp  typed_list_of_variables.cpp  typed_list_of_variables_recursively.cpp
tests/integration/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  parser.cpp
tests/unit/ast/: function_symbol.cpp  (+17 more)
(+469 files in other folders)
